--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 @import "tailwindcss";
 @plugin "daisyui";
+@plugin "daisyui" {
+   themes: night --default, dark --prefersdark;
+ }
+
+@theme {
+  --font-montserrat: "Montserrat", "sans-serif";
+}
+@font-face {
+  font-family: "Montserrat";
+  src: url("/assets/fonts/montserrat-alternates/MontserratAlternates-Medium.ttf")
+    format("truetype");
+}
