--- a/src/styles.css
+++ b/src/styles.css
@@ -2,11 +2,20 @@
 @import "tailwindcss";
 @plugin "daisyui";
 @plugin "daisyui" {
-   themes: night --default, dark --prefersdark;
- }
+  themes: night --default, dark --prefersdark;
+}
 
 @theme {
   --font-montserrat: "Montserrat", "sans-serif";
+  --animate-fadeIn: fadeIn 0.3s ease-in-out;
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
 }
 @font-face {
   font-family: "Montserrat";
