--- a/src/app/product/components/product-card/product-card.component.html
+++ b/src/app/product/components/product-card/product-card.component.html
@@ -1,22 +1,19 @@
-
-<div class="card bg-base-100 shadow-xl animate-fadeIn">
-  <figure class="px-10 pt-10">
-    <img
-      [src]=" product().images | productImage"
-      [alt]="product().title"]
-      class="rounded-xl" 
-      />
+<div class="card card-compact bg-base-100 shadow-xl animate-fadeIn">
+  <figure>
+    <img [src]="product().images | productImage" [alt]="product().title" />
   </figure>
   <div class="card-body">
-    <h2 class="card-title font-montserrat text-accent text-lg">{{ product().title }}</h2>
-    <p>{{ product().description | slice : 0 : 70}}...</p>
+    <h2
+      class="card-title font-montserrat text-accent text-lg hover:underline cursor-pointer"
+      [routerLink]="['/product', product().slug]"
+    >
+      {{ product().title }}
+    </h2>
+    <p>{{ product().description | slice : 0 : 70 }}...</p>
     <div class="card-actions justify-end">
-      
-        <a 
-            class="link link-accent"
-            [routerLink]="['/product', product().slug]">
-            Ver producto
-        </a>
+      <a class="link link-accent" [routerLink]="['/product', product().slug]">
+        Ver producto
+      </a>
     </div>
   </div>
 </div>
