--- a/src/app/store-front/pages/gender-page/gender-page.component.html
+++ b/src/app/store-front/pages/gender-page/gender-page.component.html
@@ -15,3 +15,9 @@
     }
     
 </div>
+
+
+<app-pagination 
+[pages]="productsResource.value()?.pages ?? 0"
+[currentPage]="paginationService.currentPage()"
+/>
