--- a/src/app/product/product-table/product-table.component.html
+++ b/src/app/product/product-table/product-table.component.html
@@ -28,7 +28,7 @@
             <div class="avatar">
               <div class="mask mask-squircle h-12 w-12">
                 <img
-                  [src]="product.images | productImage"
+                  [src]="product.images| productImage"
                   [src]="product.title"
                 />
               </div>
@@ -36,7 +36,8 @@
             <div>
               <a
                 [routerLink]="['/admin/products', product.id]"
-                class="font-bold"
+                class="font-bold hover:text-accent transition-colors duration-300"
+
                 >{{ product.title }}</a
               >
 
