teslo-shop :sparkles: administrative panel - product form

--- a/src/app/admin-dashboard/pages/product-admin-page/product-admin-page.component.html
+++ b/src/app/admin-dashboard/pages/product-admin-page/product-admin-page.component.html
@@ -9,5 +9,5 @@
 
 @if (productResource.hasValue()) {
     <!-- product -->
-     <h1>{{ productResource.value()?.title }}</h1>
+     <product-details [product]="productResource.value()! "></product-details>
 }
