--- a/src/app/admin-dashboard/pages/product-admin-page/product-details/product-details.component.html
+++ b/src/app/admin-dashboard/pages/product-admin-page/product-details/product-details.component.html
@@ -12,40 +12,64 @@
       placeholder="Título"
       class="input input-bordered w-full"
       formControlName="title"
+      [class.border-red-500]="productForm.get('title')?.errors ?? false"
     />
+    <form-error-label [control]="productForm.get('title')!"></form-error-label>
 
-    <input type="text" placeholder="Slug" class="input input-bordered w-full"
-    formControlName="slug" />
+    <input 
+      type="text" 
+      placeholder="Slug" 
+      class="input input-bordered w-full"
+      formControlName="slug" 
+      [class.border-red-500]="productForm.get('slug')?.errors ?? false"
+    />
+    <form-error-label [control]="productForm.get('slug')!"></form-error-label>
 
     <textarea
       class="textarea textarea-bordered"
       placeholder="Descripción"
       rows="6"
       formControlName="description"
+      [class.border-red-500]="productForm.get('description')?.errors ?? false"
     ></textarea>
+
+    <form-error-label [control]="productForm.get('description')!"></form-error-label>
 
     <h2 class="text-lg font-bold">Datos de venta</h2>
 
     <div class="grid grid-cols-1 sm:grid-cols-2 gap-2">
-      <input
+      <div>
+         <input
         type="number"
         placeholder="Precio"
         class="input input-bordered w-full"
         formControlName="price"
-      />
-
-      <input
+        [class.border-red-500]="productForm.get('price')?.errors ?? false"
+       />
+        <form-error-label [control]="productForm.get('price')!"></form-error-label>
+      </div>
+     
+      <div>
+        <input
         type="number"
         placeholder="Inventario"
         class="input input-bordered w-full"
         formControlName="stock"
-      />
+        [class.border-red-500]="productForm.get('stock')?.errors ?? false"
+    />
+    <form-error-label [control]="productForm.get('stock')!"></form-error-label>
+      </div>
     </div>
 
     <!-- tags -->
-    <input type="text" placeholder="Tags" class="input input-bordered w-full"
-    
-    formControlName="tags"/>
+    <input 
+      type="text" 
+      placeholder="Tags" 
+      class="input input-bordered w-full"
+      formControlName="tags"
+      [class.border-red-500]="productForm.get('tags')?.errors ?? false"
+    />
+    <form-error-label [control]="productForm.get('tags')!"></form-error-label>
 
     <!-- Botones para el género -->
     <div class="grid grid-cols-3 gap-2">
