teslo-shop :sparkles: administrative panel - update components to show product by id

--- a/src/app/product/product-table/product-table.component.html
+++ b/src/app/product/product-table/product-table.component.html
@@ -28,8 +28,8 @@
             <div class="avatar">
               <div class="mask mask-squircle h-12 w-12">
                 <img
-                  [src]="product.images| productImage"
-                  [src]="product.title"
+                  [src]="product.images | productImage "
+                  [alt]="product.title" 
                 />
               </div>
             </div>
