--- a/src/app/admin-dashboard/pages/product-admin-page/product-admin-page.component.html
+++ b/src/app/admin-dashboard/pages/product-admin-page/product-admin-page.component.html
@@ -1,13 +1,11 @@
 @if (productResource.isLoading()) {
 <div class="flex justify-center items-center h-screen">
-    <span class="loading loading-spinner loading-lg"></span>
+  <span class="loading loading-spinner loading-lg"></span>
 </div>
-
 }
+<!--  -->
 
-<!-- -->
-
-@if (productResource.hasValue()) {
-    <!-- product -->
-     <product-details [product]="productResource.value()! "></product-details>
+@if( productResource.hasValue() ) {
+<!-- Producto -->
+<product-details [product]="productResource.value()!" />
 }
